// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoningPlan loader Loader internals module result 1`] = `
Array [
  Array [
    Object {
      "name": "Mededeling overschrijding ex artikel 3.1, vijfde lid Wro",
    },
    Object {
      "name": "Prins Hendrikkade tussen Droogbak en Oudezijds Kolk",
    },
    Object {
      "name": "Prins Hendrikkade tussen Droogbak en Oudezijds Kolk 1e part herz.",
    },
    Object {
      "name": "Drijvende bouwwerken",
    },
  ],
]
`;

exports[`ZoningPlan loader Loader internals module result 2`] = `
Array [
  Array [
    Object {
      "name": "Mededeling overschrijding ex artikel 3.1, vijfde lid Wro",
    },
    Object {
      "name": "Prins Hendrikkade tussen Droogbak en Oudezijds Kolk",
    },
    Object {
      "name": "Drijvende bouwwerken",
    },
  ],
]
`;
